# shell_practice

./: README.md  _config.yml  add-repo.sh  git.conf  install.sh
base_convert/: README.md  convert.sh  test.sh
cal/: month_convert.sh
chroot_jails/: jail.conf  make_chroot.sh
docker/private-registery/: cleanup-private-registry.sh  setup-private-registry.sh
git-repo-server/: LICENSE  README.md  delete-repo.sh  git.ubuntu.conf  install-server.sh  list-repos.sh
gpg/: backup_gpg.sh  restore_gpg.sh
markup/: convert.sh
net/: README.md  netadmin.sh  test.sh
organize-bookmarks/: .env.example  .gitignore  README.md  organize_bookmarks.py  pyproject.toml
repos/: add-description.sh  add-lisense.sh  add-title.sh  delete_usu_repos.sh  organize.sh
repos/github/rename/: rename_repos.sh
repos/github/rename/fix_words/: collect_repos.sh  dictionary.txt  rename_repos_from_file.sh  renamed_repos.txt  repos.txt  run_all.sh  split_rename_repos.py
repos/github/rename/test/: split_words.py
repos/merge/: merge_repo.sh  merge_repo_group.sh  merge_repos.sh
ta/: group_submission_files.sh
utils/: convert.sh
